--- a/index.html
+++ b/index.html
@@ -1,7 +1,52 @@
-my github page
+<code>vincent chu <br>
+<del>119 judah st. <br>
+san francisco, ca 94122</del><br>
+<br>
+formerly of cambridge, ma<br>
+formerly of simi valley, ca<br>
+<br>
+crystal ball:<br>
+<del>seattle, wa</del><br>
+<del>san francisco, ca</del><br>
+<del>simi valley, ca</del><br>
+<del>pittsburgh, pa</del><br>
+<del>washington, dc</del><br>
+<del>princeton, nj</del><br>
+<del>new york, ny<br>
+tanglewood, ma<br>
+boston, ma<br>
+cambridge, ma<br>
+frankfurt, germany<br>
+prague, czech republic<br>
+berlin, germany<br>
+prague, czech republic<br>
+simi valley, ca<br>
+palo alto, ca<br>
+argonne, il<br>
+reno, nv<br>
+simi valley, ca<br>
+palo alto, ca<br>
+new york, ny<br>
+chicago, il<br>
+simi valley, ca<br>
+manhattan beach, ca<br>
+anchorage, ak<br>
+chicago, il<br>
+simi valley, ca<br>
+paris, france<br>
+yosemite valley, ca<br>
+tuolumne meadows, ca<br>
+mammoth lakes, ca<br>
+bishop, ca<br>
+denver, co<br>
+golden, co<br>
+aspen, co<br>
+los angeles, c<br>
+boston, ma<br>
+new york city, ny<br>
+princeton, nj<br>
+philadelphia, pa<br>
+seattle</del><br>
+san francisco, ca<br/>
 
-you can find me:
-
-http://vccv.posterous.com 
-http://twitter.com/vincentchu 
-http://www.quora.com/Vincent-Chu
+</code>
