into the future

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@ boston, ma<br>
 new york city, ny<br>
 princeton, nj<br>
 philadelphia, pa<br>
-seattle</del><br>
+seattle<br>
+dhaka, bangladesh<br>
+kathmandu, nepal<br>
+shanghai, china<br>
+hong kong sar, china</del><br>
+mumbai, india<br>
 san francisco, ca<br/>
 
 </code>
