--- a/index.html
+++ b/index.html
@@ -50,8 +50,18 @@ seattle<br>
 dhaka, bangladesh<br>
 kathmandu, nepal<br>
 shanghai, china<br>
-hong kong sar, china</del><br>
+hong kong sar, china<br>
 mumbai, india<br>
+taipei, taiwan<br/>
+nashville, tn<br/>
+buenos aires, argentina<br/>
+indian creek, ut<br/>
+moab, ut<br/>
+moab, ut<br/>
+miami, fl<br/>
+palm beach gardens, fl<br/>
+cocoa beach, fl<br/>
+mexico city, mexico<br/>
+seattle, wa</del><br/>
 san francisco, ca<br/>
-
 </code>
